--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
 
 .navbar-default {
     background-color: #2C3E50;
-    text-decoration: none;
-    padding: 2% 0;
     border: none;
 }
 
@@ -22,75 +20,51 @@ body {
 
 .navbar-default .navbar-nav>li>a {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     color: white;
-    padding-right: 30px;
+    padding-left: 30px;
 }
 
-header {
-    text-align: center;
-    color: #fff;
-    background: #18bc9c;
+.navbar-default .navbar-nav>li>a:not(:last-of-type) {
+    
 }
 
-header .container {
-    padding-top: 200px;
-    padding-bottom: 50px;
+.jumbotron {
+    background-color: #1ABC9C;
+    padding: 150px 0 60px;
 }
 
-header img {
-    /* display: block; */
-    margin: 0 auto 20px;
+.jumbotron img {
     width: 240px;
 }
 
-header .intro-text .start {
-    text-transform: uppercase;
-    font-size: 60px;
-    font-weight: 600;
-}
-
-
-.star-wrapper {
-    margin: 25px 0 30px;
-}
-
-.left-line {
-    background-color: #fff;
-    width: 80px;
-    /* max-width: 100px; */
-    height: 2.5px;
-    border-radius: 20px;
-    display: inline-block;
-    margin-bottom: 10px;
-    margin-right: 20px;
+.jumbotron h1 {
+    font-weight: 800;
 }
 
 .star {
-    display: inline-block;
+    position: relative;
+    margin: 20px 10px;
+    width: 200px;
+    margin: 30px auto 20px;
 }
 
-.star i {
-    font-size: 32px;
+.star::before {
+    content: "";
+    background-color: white;
+    width: 70px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    left: 0;
 }
 
-.right-line {
-    background-color: #fff;
-    width: 80px;
-    max-width: 100px;
-    height: 2.5px;
-    border-radius: 20px;
-    display: inline-block;
-    margin-bottom: 10px;
-    margin-left: 20px;
+.star::after {
+    content: "";
+    background-color: white;
+    width: 70px;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    right: 0;
 }
-
-.skills {
-    font-size: 20px;
-    font-weight: 400;
-}
-
-
-
-
-
