--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@ section#about a.btn {
     color: white;
 }
 
+section#about a.btn:hover {
+    color: black;
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+}
+
 /* CONCTACT SECTION */
 section#contact .star::before,
 section#contact .star::after {
@@ -168,6 +174,47 @@ section#contact .star::after {
 
 textarea {
     resize: none;
+}
+
+/* FOOTER */
+footer {
+    background-color: #2C3E50;
+}
+
+footer h4 {
+    margin: 30px 0 30px;
+}
+
+footer p a {
+    color: #1abc9c;
+    text-decoration: none;
+}
+
+footer p a:hover {
+    color: #1abc9c6e;
+    text-decoration: none;
+}
+
+footer .btn-circle {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    padding:0;
+    border-radius: 50%;
+    border: 1px solid white;
+    color: white;
+    font-size: 20px;
+  }
+
+footer .btn-circle:hover {
+    background-color: white;
+    color: black;
+}
+
+/* COPYRIGHT SECTION */
+section#copyright {
+    background-color: black;
+    padding: 20px 0;
 }
 
 
