--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
 }
 
 .navbar-default .navbar-toggle {
-    /* background-color: #1ABC9C; */
     border: none;
 }
 
@@ -128,6 +127,22 @@ section#portfolio .star {
 section#portfolio .star::before,
 section#portfolio .star::after {
     background-color: black;
+}
+
+#portfolio .overlay {
+    position: relative;
+}
+
+#portfolio .overlay:hover::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: .9;
+    width: 100%;
+    height: 100%;
+    background-color: green;
+    /* ? transition su un after */
 }
 
 .img-padding {
