--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     color: white;
 }
 
+.text-dark {
+    color: black;
+}
+
 .bold-text {
     font-weight: 800;
 }
@@ -11,13 +15,16 @@ body {
     background-color: #1ABC9C;
 }
 
+.bg-dark {
+    background-color: #2C3E50;
+}
+
 .padding-section {
     padding-top: 80px;
     padding-bottom: 80px;
 }
 
 .navbar-default {
-    background-color: #2C3E50;
     border: none;
     border-radius: 0;
     padding: 20px 0;
@@ -73,10 +80,6 @@ body {
     height: 200px;
 }
 
-/* .jumbotron h1 {
-    font-weight: 800;
-} */
-
 /* stellina malefica */
 .star {
     position: relative;
@@ -111,19 +114,8 @@ body {
 .skills {
     font-size: 20px;
 }
-/* FINE HEADER */
-
-section#portfolio,
-section#contact {
-    color: black;
-}
 
 /* PORTFOLIO SECTION */
-
-section#portfolio .star {
-    color: black;
-}
-
 section#portfolio .star::before,
 section#portfolio .star::after {
     background-color: black;
@@ -141,8 +133,25 @@ section#portfolio .star::after {
     opacity: .9;
     width: 100%;
     height: 100%;
-    background-color: green;
+    background-color: rgba(26,188,156,.9);
+    border-radius: 5px;
     /* ? transition su un after */
+}
+
+#portfolio .overlay:hover i {
+    opacity: 1;
+    z-index: 2;
+    font-size: 80px;
+    font-weight: 800;
+}
+
+#portfolio .overlay i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    opacity: 0;
 }
 
 .img-padding {
@@ -192,9 +201,6 @@ textarea {
 }
 
 /* FOOTER */
-footer {
-    background-color: #2C3E50;
-}
 
 footer h4 {
     margin: 30px 0 30px;
